Caption white space wrap bug fix (HorizontalPanel replaced by BoxLayout)

--- a/src/org/gwt/mosaic/ui/public/gwt/standard/Mosaic.css
+++ b/src/org/gwt/mosaic/ui/public/gwt/standard/Mosaic.css
@@ -206,6 +206,8 @@ input {
 	padding: 4px 4px 4px 4px;
 	text-align: left !important;
 	font-weight: bold;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 /*** DropDownPanel ***/
